--- a/project_repo_ecm_simul.ipynb
+++ b/project_repo_ecm_simul.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -232,12 +232,48 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6dc8f62b088434bbf1a112cf9d67d47",
+       "model_id": "c86f1611dad042968710ee6244c49c28",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(HBox(children=(Dropdown(description='Load Config', options={'DEFAULT': '/home/marco/Documenti/I…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1080x900 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1080x900 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1080x900 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1080x900 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -266,9 +302,16 @@
    },
    "outputs": [],
    "source": [
-    "#from debug import debug_view\n",
-    "#debug_view"
+    "from debug import debug_view\n",
+    "debug_view"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
