fixed rgb parameters, simulation is working

--- a/project_repo_ecm_simul.ipynb
+++ b/project_repo_ecm_simul.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -232,7 +232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f851b14a6d34162b3d467080464a72c",
+       "model_id": "ca8718b8569a47c6abfd530677872422",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd7908c8439447e5b203757142f3f4bb",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
