--- a/project_repo_ecm_simul.ipynb
+++ b/project_repo_ecm_simul.ipynb
@@ -232,12 +232,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea0ce2ef08d24f7bbb146fa12e2263eb",
+       "model_id": "5fa3a39748e74adb8de389ecd328d5a9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Load Config', options={'DEFAULT': '/home/marco/Documenti/I…"
+       "VBox(children=(HBox(children=(Dropdown(description='Load Config', options={'DEFAULT': '/home/marco/project_rep…"
       ]
      },
      "metadata": {},
