--- a/project_repo_ecm_simul.ipynb
+++ b/project_repo_ecm_simul.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --user matplotlib==3.1\n",
+    "import matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "extensions": {
